load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "badger_lib",
    srcs = ["main.go"],
    importpath = "github.com/dgraph-io/badger/v3/badger",
    visibility = ["//visibility:private"],
    deps = [
        "//badger/cmd",
        "@com_github_dgraph_io_ristretto//z",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@io_opencensus_go//zpages",
    ],
)

go_binary(
    name = "badger",
    embed = [":badger_lib"],
    visibility = ["//visibility:public"],
)
