load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "fb",
    srcs = [
        "BlockOffset.go",
        "TableIndex.go",
    ],
    importpath = "github.com/dgraph-io/badger/v3/fb",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_flatbuffers//go"],
)
