load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# gazelle:exclude protos_test.go

proto_library(
    name = "pb_proto",
    srcs = ["badgerpb3.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogofaster_proto"],
    importpath = "github.com/dgraph-io/badger/v3/pb",
    proto = ":pb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "pb",
    embed = [":pb_go_proto"],
    importpath = "github.com/dgraph-io/badger/v3/pb",
    visibility = ["//visibility:public"],
)
