load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trie",
    srcs = ["trie.go"],
    importpath = "github.com/dgraph-io/badger/v3/trie",
    visibility = ["//visibility:public"],
    deps = [
        "//pb",
        "//y",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "trie_test",
    srcs = ["trie_test.go"],
    embed = [":trie"],
    deps = [
        "//pb",
        "@com_github_stretchr_testify//require",
    ],
)
