load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "y",
    srcs = [
        "bloom.go",
        "checksum.go",
        "encrypt.go",
        "error.go",
        "event_log.go",
        "file_dsync.go",
        "file_nodsync.go",
        "iterator.go",
        "metrics.go",
        "watermark.go",
        "y.go",
        "zstd.go",
    ],
    importpath = "github.com/dgraph-io/badger/v3/y",
    visibility = ["//visibility:public"],
    deps = [
        "//pb",
        "@com_github_cespare_xxhash//:xxhash",
        "@com_github_dgraph_io_ristretto//z",
        "@com_github_klauspost_compress//zstd",
        "@com_github_pkg_errors//:errors",
        "@org_golang_x_net//trace",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "y_test",
    srcs = [
        "bloom_test.go",
        "encrypt_test.go",
        "y_test.go",
    ],
    embed = [":y"],
    deps = [
        "//pb",
        "@com_github_dgraph_io_ristretto//z",
        "@com_github_stretchr_testify//require",
    ],
)
