load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testgc_lib",
    srcs = ["main.go"],
    importpath = "github.com/dgraph-io/badger/v3/integration/testgc",
    visibility = ["//visibility:private"],
    deps = [
        "//:badger",
        "//y",
        "@com_github_dgraph_io_ristretto//z",
    ],
)

go_binary(
    name = "testgc",
    embed = [":testgc_lib"],
    visibility = ["//visibility:public"],
)
